// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifApp> Comprobamos que <GifApp> se muestra correctamente 1`] = `
<Fragment>
  <h2>
    GifApp
  </h2>
  <AddCategories
    setCategories={[Function]}
  />
  <hr />
  <ul />
</Fragment>
`;

exports[`Pruebas en <GifApp> Debe mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifApp
  </h2>
  <AddCategories
    setCategories={[Function]}
  />
  <hr />
  <ul>
    <GifGrid
      category="Konosuba"
      key="Konosuba"
    />
    <GifGrid
      category="Bleach"
      key="Bleach"
    />
  </ul>
</Fragment>
`;
